# ncollide-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  setup.py
cmake/: ctrl_utils-CMakeLists.txt.in  ncollide_cppConfig.cmake.in
include/ncollide/: ncollide2d.h  ncollide3d.h  ncollide_ffi.h
include/ncollide-cpp/: ncollide2d.h  ncollide3d.h  ncollide_ffi.h
include/ncollide_cpp/: ncollide.h  ncollide2d.h  ncollide3d.h  ncollide_ffi.h
ncollide/: __init__.py
ncollide2d-cpp/: Cargo.toml
ncollide3d-cpp/: Cargo.toml
src/: CMakeLists.txt  bounding_volume3d.rs  lib.rs  ncollide.cc  ncollide2d.cc  ncollide3d.cc  query2d.rs  query3d.rs  rounded_cuboid3d.rs
src/bounding_volume/: aabb.rs  bounding_sphere.rs  bounding_volume2d.rs  bounding_volume3d.rs  mod.rs
src/math/: math2d.rs  math3d.rs  mod.rs
src/python/: CMakeLists.txt  ncollide2d.cc  ncollide3d.cc
src/query/: mod.rs  pairwise.rs  point.rs  query2d.rs  query3d.rs  ray.rs
src/shape/: ball.rs  capsule.rs  compound.rs  convex_hull.rs  convex_polygon.rs  cuboid.rs  cylinder.rs  mod.rs  rounded_cuboid.rs  shape2d.rs  shape3d.rs  trimesh.rs
src/transformation/: convex_hull.rs  mod.rs  transformation3d.rs
test/: main.cc
tests/: CMakeLists.txt
