[package]
name = "ncollide2d-cpp"
version = "0.1.0"
authors = ["Toki Migimatsu <toki.migimatsu@gmail.com>"]
edition = "2018"

[dependencies]
nalgebra = "*"
ncollide2d = "0.23"

[features]
default = ["dim2"]
dim2 = []

[lib]
path = "../src/lib.rs"
required-features = ["dim2"]
crate-type = ["staticlib"]
