[package]
name = "ncollide3d-cpp"
version = "0.1.0"
authors = ["Toki Migimatsu <toki.migimatsu@gmail.com>"]
edition = "2018"

[dependencies]
nalgebra = "*"
ncollide3d = "0.23"
ncollide2d = "0.23"

[features]
default = ["dim3"]
dim3 = []

[lib]
path = "../src/lib.rs"
required-features = ["dim3"]
crate-type = ["staticlib"]
